Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -69,7 +69,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "list=['a','b','']"
+   ]
   },
   {
    "cell_type": "markdown",
