Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -55,22 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'A'"
+       "['A', 'b', 'c', 'd']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "list[0]=list[0].upper()"
+    "list\n"
    ]
   },
   {
